<resources>
    <string name="app_name">Phimp.me</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>
    <string name="title_account">Accounts</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_text">Touch to focus, and press the blue camera button to take photos. For more help, click Online
        help from Settings. Open Camera is completely free. If you like this app, please consider buying my donate app :)
        (see link in Settings, or Online help).\n\nPrivacy Policy: Location permission is required for geotagging, but this
        is disabled by default. If enabled, your location is encoded in the saved files (and it is only used for this
        purpose).
    </string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="facebook_app_id">125766838062659</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="permissions_restart">Please restart app after giving permissions</string>
    <string name="grant_permission">Grant Permissions</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure Locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_burst_mode">Cancelled burst mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="title">Title</string>
    <string name="reset">Reset Settings</string>
    <string name="reset_sub_text">Reset all settings to default</string>
    <string name="reset_settings">Are you sure you want to restore the default settings?</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only)
        (slower to take photos, and may fail on devices with too low memory)
    </string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)
    </string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the
        orientation of the photo/video will be with respect to the specified orientation
    </string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_summary">Set a timer for the camera</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for burst mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or burst mode delay (from 60 seconds)
    </string>
    <string name="preference_burst_mode">Burst</string>
    <string name="preference_burst_mode_summary">Take multiple photos in succession</string>
    <string name="preference_burst_interval">Burst mode interval</string>
    <string name="preference_burst_interval_summary">Delay (if any) between taking photos in burst mode</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_touch_capture">Touch to capture</string>
    <string name="preference_touch_capture_summary">Take a photo just by touching or double-tapping the preview</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or
        delete the photo
    </string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_volume_keys_summary">Set behaviour for when volume keys are pressed</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="preference_audio_control_summary">Take photo or record video when a noise is detected, or on a voice
        command (\"cheese\"). When enabled, use the on-screen microphone button to start and stop listening.
    </string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="exclude">Exclude</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>
    <string name="zip">Zip</string>
    <string name="sort_menu_title">Sort</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="numeric">As number</string>
    <string name="ascending">Ascending</string>
    <string name="select_all">Select All</string>
    <string name="copy_to">Copy to</string>
    <string name="move_to">Move to</string>
    <string name="use_as">Use as</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <string name="upload">Upload</string>
    <string name="set_preview">Set as preview</string>
    <string name="clear_preview">Clear preview</string>
    <string name="affix">Affix</string>
    <string name="settings">Settings</string>
    <string name="google_maps">maps.google.com</string>
    <string name="mapbox_streets">mapbox.com (streets)</string>
    <string name="mapbox_dark">mapbox.com (dark)</string>
    <string name="mapbox_light">mapbox.com (light)</string>
    <string name="herokuapp">herokuapp.com (watercolor)</string>
    <string name="choose_the_map_provider">Choose the map provider</string>
    <string name="use_google_static_maps_faster">Use Google static maps</string>
    <string name="use_openstreetmap_slower">Use OpenStreetMap</string>
    <string name="pin">Pin to top</string>
    <string name="share">share</string>
    <string name="camera_short">Camera</string>
    <string name="camera_long">Opens Phimp.me Camera</string>
    <string name="home_short">Gallery</string>
    <string name="home_long">Opens Phimp.me Gallery</string>
    <string name="account_short">Accounts</string>
    <string name="account_long">Opens Phimp.me Account</string>
    <string name="all_photos">All_photos</string>
    <string name="nextcloud">NextCloud</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_refresh_button">Refresh connection</string>
    <string name="auth_register">Do you not have a server yet?\nClick here to get one from a provider</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="auth_expired_basic_auth_toast">Please enter the current password</string>
    <string name="auth_testing_connection">Testing connection</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="auth_host_address">Server address</string>
</resources>