<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.fossasia.phimpme.gallery.activities.LFMainActivity">

    <item
        android:id="@+id/all_photos"
        android:title="@string/all_photos"
        android:icon="@drawable/ic_photo_24dp"
        app:showAsAction="always" />

    <group android:id="@+id/general_action">

        <item
            android:id="@+id/sort_action"
            android:title="@string/sort_menu_title"
            app:showAsAction="ifRoom">
            <menu xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".PhotosActivity">
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/name_sort_action"
                        android:title="@string/name"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/date_taken_sort_action"
                        android:checked="true"
                        android:title="@string/date"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/size_sort_action"
                        android:title="@string/size"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/numeric_sort_action"
                        android:title="@string/numeric"
                        app:showAsAction="never" />
                </group>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/ascending_sort_action"
                        android:title="@string/ascending"
                        app:showAsAction="never" />
                </group>
            </menu>
        </item>
    </group>

    <group android:id="@+id/photos_option_men">
        <item
            android:id="@+id/sharePhotos"
            android:title="@string/share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_copy"
            android:title="@string/copy_to"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_move"
            android:title="@string/move_to"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/album_options_menu">
        <item
            android:id="@+id/album_details"
            android:title="@string/details"
            app:showAsAction="never" />
        <item
            android:id="@+id/excludeAlbumButton"
            android:title="@string/exclude"
            app:showAsAction="never" />
        <item
            android:id="@+id/hideAlbumButton"
            android:title="@string/hide"
            app:showAsAction="never" />
        <item
            android:id="@+id/zipAlbumButton"
            android:title="@string/zip"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/renameAlbum"
        android:title="@string/rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_action"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear_album_preview"
        android:title="@string/clear_preview"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/set_pin_album"
        android:title="@string/pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/setAsAlbumPreview"
        android:title="@string/set_preview"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/affixPhoto"
        android:title="@string/affix"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>