<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.fossasia.phimpme.leafpic.activities.SingleMediaActivity">

    <group android:id="@+id/only_photos_options">
        <item
            android:id="@+id/action_use_as"
            android:title="@string/use_as"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/on_internal_storage">
        <item
            android:id="@+id/action_share"
            android:orderInCategory="0"
            android:title="@string/share"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="1"
            android:title="@string/delete"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_description"
        android:title="Description"
        app:showAsAction="never" />
    <!-- End Albums Stuff -->
</menu>