<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical"
    android:id="@+id/scroll"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/nextcloud_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/alternate_half_padding"
        android:text="@string/nextcloud"
        android:textColor="@color/nextcloud_color"
        android:textSize="@dimen/sub_big_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/centeredRefreshButton"
            style="@style/ownCloud.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/alternate_margin"
            android:contentDescription="@string/auth_check_server"
            android:text="@string/auth_check_server"
            android:theme="@style/Button"
            android:visibility="gone" />

        <TextView
            android:id="@+id/instructions_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="@dimen/alternate_margin"
            android:contentDescription="@string/auth_expired_basic_auth_toast"
            android:text="@string/auth_expired_basic_auth_toast"
            android:textColor="@color/white"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/hostUrlFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/zero">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_hostUrl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textlayout_margin"
                android:gravity="bottom">

                <EditText
                    android:id="@+id/hostUrlInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_gravity="bottom"
                    android:background="@drawable/back_round"
                    android:contentDescription="@string/auth_host_address"
                    android:hint="@string/auth_host_address"
                    android:inputType="textUri"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:textColor="@color/login_text_hint_color"
                    android:textColorHint="@color/login_text_hint_color">

                    <requestFocus />
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/embeddedRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="@dimen/alternate_half_padding"
                android:background="@android:color/transparent"
                android:contentDescription="@string/auth_refresh_button"
                android:padding="@dimen/zero"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_refresh_black_24dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/server_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/alternate_margin"
            android:contentDescription="@string/auth_testing_connection"
            android:drawableStart="@drawable/ic_refresh_black_24dp"
            android:drawablePadding="@dimen/alternate_half_padding"
            android:gravity="center_vertical"
            android:minHeight="@dimen/display_text_min_height"
            android:text="@string/auth_testing_connection"
            android:textColor="@color/md_grey_500" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_oAuthEntryPoint_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/oAuthEntryPoint_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textUri"
                android:singleLine="true"
                android:text="@string/oauth2_url_endpoint_auth"
                android:textColor="@color/white"
                android:textColorHint="@color/login_text_hint_color"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_oAuthEntryPoint_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/oAuthEntryPoint_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textUri"
                android:singleLine="true"
                android:text="@string/oauth2_url_endpoint_access"
                android:textColor="@color/white"
                android:textColorHint="@color/login_text_hint_color"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_account_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textlayout_margin"
            android:gravity="bottom">

            <EditText
                android:id="@+id/account_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/back_round"
                android:contentDescription="@string/auth_username"

                android:hint="@string/auth_username"
                android:inputType="textNoSuggestions"
                android:textColor="@color/login_text_hint_color"
                android:textColorHint="@color/login_text_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_account_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/alternate_half_padding"
            android:layout_height="@dimen/textlayout_margin"
            android:gravity="bottom">

            <EditText
                android:id="@+id/account_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:background="@drawable/back_round"
                android:contentDescription="@string/auth_password"
                android:drawablePadding="@dimen/alternate_half_padding"
                android:ems="10"
                android:hint="@string/auth_password"
                android:inputType="textPassword"
                android:textColor="@color/login_text_hint_color"
                android:textColorHint="@color/login_text_hint_color" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/auth_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/alternate_margin"
            android:contentDescription="@string/auth_unauthorized"
            android:drawableStart="@drawable/ic_refresh_black_24dp"
            android:drawablePadding="@dimen/alternate_half_padding"
            android:gravity="center_vertical"
            android:text="@string/auth_unauthorized"
            android:textColor="@color/md_grey_500" />

        <Button
            android:id="@+id/buttonOK"
            style="@style/Button.Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/setup_btn_connect"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/setup_btn_connect"
            android:theme="@style/Button.Login" />

        <Button
            android:id="@+id/welcome_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/auth_register"
            android:onClick="onRegisterClick"
            android:paddingBottom="@dimen/alternate_half_padding"
            android:paddingTop="@dimen/alternate_half_padding"
            android:text="@string/auth_register"
            android:textColor="@color/login_text_hint_color" />
    </LinearLayout>
</LinearLayout>
</ScrollView>